Set up CI with Azure Pipelines
[skip ci]

--- a/ado-terraform-pipeline/ado-pipeline/azure-pipelines.yml
+++ b/ado-terraform-pipeline/ado-pipeline/azure-pipelines.yml
@@ -68,7 +68,7 @@ variables:
 #                                                                       #
 #########################################################################
     serviceConnectionName:
-      'iac-lab'
+      'Test service connection'
 # -- Terraform Version
 # -- Support 0.15.1 and above
     terraformVersion:
